compiler-core/src/snapshots/gleam_core__dependency__tests__adding_package_version_that_does_not_exist.snap
---
source: compiler-core/src/dependency.rs
expression: message
---
error: Dependency resolution failed

The package `wibble` doesn't have a version 1.0.0.
