compiler-core/src/snapshots/gleam_core__dependency__tests__adding_package_version_that_does_not_exist_2.snap
---
source: compiler-core/src/dependency.rs
expression: message
---
error: Dependency resolution failed

The package `wibble` has no versions in the range >= 2.0.1.
