compiler-core/src/snapshots/gleam_core__dependency__tests__resolution_error_message_for_optional_requirement.snap
---
source: compiler-core/src/dependency.rs
expression: message
---
error: Dependency resolution failed

There's no compatible version of `gleam_stdlib`:
  - You require package_with_optional >= 0.1.0 and < 1.0.0
    - package_with_optional requires gleam_stdlib >= 0.1.0 and < 0.3.0
  - You require gleam_stdlib >= 0.3.0 and < 1.0.0
