compiler-core/src/snapshots/gleam_core__dependency__tests__resolution_error_message_for_requirement_with_no_lower_bound.snap
---
source: compiler-core/src/dependency.rs
expression: message
---
error: Dependency resolution failed

The package `wibble` has no versions in the range < 1.0.0.
